style: fix shrink of checkbox input in the CheckoutPage & change LanguageSelector position on mobile devices

--- a/src/Components/Header/FirstHeader/LanguageSelector.module.scss
+++ b/src/Components/Header/FirstHeader/LanguageSelector.module.scss
@@ -24,12 +24,6 @@
   }
 }
 
-@include small {
-  .languageSelector {
-    margin-inline-end: 37px;
-  }
-}
-
 .languageSelector .currentOption {
   width: 100%;
   display: flex;
